[metadata]
name = retry
version = 0.10.0
author = invl
author-email = invlpg@gmail.com
summary = Easy to use retry decorator.
license = Apache License 2.0
description-file = README.rst
home-page = https://github.com/invl/retry
requires-python = >=3.10
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development

[wheel]
universal = 1
